tests/ui/mir-dataflow/uninits-2.stderr
error: crablangc_peek: bit not set
  --> $DIR/uninits-2.rs:14:5
   |
LL |     crablangc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 2 previous errors

